# Denoising_EMNIST

./: .gitignore  GAN.ipynb  GAN_mode_collapse.ipynb  README.md  gan.py  pyproject.toml  tim.ipynb  utils.py  vae.py
models/: D.ckpt  G.ckpt  simple_discriminator.pth  simple_generator.pth
notebooks/: GAN.ipynb
