[project]
name = "denoising-emnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

# Nécessaire pour que le module soit reconnu comme un package
[tool.setuptools]
py-modules = []
